# shitrust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build.sh
assets/: favicon.html  icon.png.md
docs/: getting_started.md  language_grammar.md  language_guide.md  language_reference.md
examples/: advanced.sr  advanced_features.sr  async_programming.sr  collections_example.sr  features.sr  hello.sr  hello_world.sr  io_operations.sr  pipeline_operator.sr  time_module.sr  traits_and_generics.sr
src/: ast.rs  code_gen.rs  compiler.rs  error.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  module_system.rs  parser.rs  traits.rs  type_system.rs
src/stdlib/: async_runtime.rs  collections.rs  concurrent.rs  crypto.rs  io.rs  time.rs
website/: README.md  about.html  api.html  examples.html  guide.html  index.html  netlify.toml  reference.html  tutorials.html
website/css/: style.css
website/js/: main.js
website/tutorials/adventure/: adventure_game.sr  index.html
website/tutorials/calculator/: calculator.sr  index.html
website/tutorials/todo/: index.html  todo_list.sr
