[package]
name = "shitrust"
version = "0.3.0"
edition = "2021"
authors = ["ShitRust Team"]
description = "A programming language combining features from Rust, Python, and C/C++"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/shitrust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
lazy_static = "1.4"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

[lib]
name = "shitrust"
path = "src/lib.rs"

[[bin]]
name = "shitrust"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 1 