[package]
name = "shitrust"
version = "0.4.0"
edition = "2021"
authors = ["Waowzar"]
description = "A programming language combining features from Rust, Python, and C/C++"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Waowzar/shitrust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
lazy_static = "1.4"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# New dependencies for the improved version
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
thread_local = "1.1"

[lib]
name = "shitrust"
path = "src/lib.rs"

[[bin]]
name = "shitrust"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 1 
